# Spl-token-creator

./: Cargo.toml  README.md
src/: helpers.rs  main.rs
