[package]
name = "solana"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = "=1.18.5"
solana-sdk = "=1.18.5"
solana-client = "=1.18.5"
solana-rpc-client = "=1.18.5"
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
mpl-token-metadata = "4.1.2"
spl-token = "=4.0.0"
spl-associated-token-account = "3.0.2"

